apply freelancer spacing fix

--- a/src/pages/applyFreelancer/applyFreelancer.css
+++ b/src/pages/applyFreelancer/applyFreelancer.css
@@ -1,7 +1,7 @@
 .freelancer-main-title {
     font-size: 24px;
     max-width: 550px !important;
-    margin: 24px auto 48px auto !important;
+    margin: 0 auto 24px auto !important;
 }
 
 .freelancer-card {
